# Pico_osilloscope

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
.github/agents/: expert-coder.agent.md  expert-explorer.agent.md  expert-reviewer.agent.md  strict-orchestrator.agent.md
.github/hooks/: enforce-git-branch-policy.ps1  enforce-subagent-policy.ps1  git-branch-policy.json  subagent-policy.json
docs/: README.md
firmware/: CMakeLists.txt
firmware/src/: CMakeLists.txt  adc_sampler.c  adc_sampler.h  clock_manager.c  clock_manager.h  config.h  hat_mode.c  hat_mode.h  main.c  osc_mode.c  osc_mode.h  pin_monitor.c  pin_monitor.h  status_led.c  status_led.h  usb_comm.c  usb_comm.h
hardware/: README.md
pc_app/: requirements.txt
pc_app/src/: gui.py  main.py  protocol_analyzer.py  serial_reader.py
